# LearnOpenGL

./: CMakeLists.txt  README.md
glsl/: light.fs  shader.fs  shader.vs
include/glad/: glad.h
include/utils/: camera.hpp  filesystem.hpp  mesh.hpp  model.hpp  shader.hpp  shader_s.hpp
src/: CMakeLists.txt  glad.c  main.cpp
